c4prj2_input/grade.txt
Grading at Thu Oct  3 02:47:38 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:37:21: error: implicit declaration of function ‘strlen’ [-Werror=implicit-function-declaration]
   if((str ==NULL)||(strlen(str)==0)){
                     ^
input.c:37:21: error: incompatible implicit declaration of built-in function ‘strlen’ [-Werror]
input.c:37:21: note: include ‘<string.h>’ or provide a declaration of ‘strlen’
input.c:49:13: error: incompatible implicit declaration of built-in function ‘strlen’ [-Werror]
     if(i+1>=strlen(str)){
             ^
input.c:49:13: note: include ‘<string.h>’ or provide a declaration of ‘strlen’
input.c:61:11: error: incompatible implicit declaration of built-in function ‘strlen’ [-Werror]
     if(i>=strlen(str)){
           ^
input.c:61:11: note: include ‘<string.h>’ or provide a declaration of ‘strlen’
input.c: In function ‘checkEntry’:
input.c:33:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
input.c: In function ‘read_input’:
input.c:77:12: error: ‘deckArray’ is used uninitialized in this function [-Werror=uninitialized]
   deck_t **deckArray = realloc(deckArray, sizeof(*deckArray));
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
